--- a/CSS/style.css
+++ b/CSS/style.css
@@ -77,14 +77,52 @@ a:hover {
 }
 /** end of head section CSS - need to add media queries */
 
+/* search */
 button {
-    width: auto;
-    font-weight: bolder;
-    background-color: #0065FC;
-    caret-color: white;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  border-style: none;
+  background-color: #0065FC;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  color: white;
 }
 
+form {
+    display:flex;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: #F2F2F2;
+    width: fit-content;
+   
+}
 
+input {
+    border-style: none;
+    font-weight: bold;
+    color: black;
+    font-family: 'Raleway', sans-serif;
+}
+
+#searchicon {
+background-color: #F2F2F2;
+color: black;
+border-top-left-radius: 20px;
+border-bottom-left-radius: 20px;
+border-bottom-right-radius: 0px;
+border-top-right-radius: 0px;
+}
+
+/* Filters */
+
+#filters {
+    display: flex;
+    flex-direction: row;
+}
+
+h4 {
+    padding: 10px;
+}
 
 ul {
     list-style: none;
@@ -98,7 +136,7 @@ li {
     padding-right: 5px;
     margin: 20px;
     border-radius: 50px;
-    border-color: #afaeac;
+    border-color: #F2F2F2;
     border-style: solid;
 }
 
