--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,7 @@ body {
     border: 0;
     margin: 0;
     padding: 0;
+    padding
 }
 
 header {
@@ -146,4 +147,23 @@ i {
     padding: 10px;
     border-style: hidden;
     border-radius: 50px;
+}
+
+/* info */
+
+
+#infoicon {
+    background-color: white;
+    border-style: solid ;
+    border-color: #F2F2F2;
+    width: 10px;
+    height: 10px;
+}
+
+#info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width:fit-content;
+    height: fit-content;
 }
