--- a/CSS/style.css
+++ b/CSS/style.css
@@ -86,6 +86,7 @@ button {
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
   color: white;
+  
 }
 
 form {
@@ -121,7 +122,9 @@ border-top-right-radius: 0px;
 }
 
 h4 {
-    padding: 10px;
+    display: flex;
+    align-items: center;
+    margin-left: 50px;
 }
 
 ul {
@@ -157,6 +160,7 @@ i {
     border-color: #F2F2F2;
     width: 10px;
     height: 10px;
+    margin-left: 50px;
 }
 
 #info {
@@ -165,16 +169,18 @@ i {
     justify-content: space-between;
     width:fit-content;
     height: fit-content;
+    margin-left: 10px;
+
 }
 
 /* accommodations */
 
 #acom {
-    flex-basis: 100%;
+    flex-basis: 80%;
     background-color:#F2F2F2;
     border-radius: 10px;
     box-sizing: border-box;
-    width:55%;
+    
     margin-left:50px;
     padding: 10px
 }
@@ -182,15 +188,16 @@ i {
 
 
 #acomhead {
-    font-size: small;
-    padding-left: 20px;
+    font-size: large;
+    padding-left: 45px;
 }
 
 #hotelcards {
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
-    flex-basis: 1, 1, 190px;
+    justify-content: space-around;
+    margin-bottom: 30px;
     
 
 }
@@ -198,20 +205,31 @@ i {
 #star {
     background: none;
     border-radius: 0px;
-    padding:2px;
     color:#0065FC;
+    padding: 0px;
 }
+
+#starg {
+    background: none;
+    border-radius: 0px;
+    padding:2px;
+    color:#b6b4b4;
+    }
 
 .cards {
     border-style: solid;
     border-color: white;
     border-radius: 20px;
     background-color: white;
+    margin-bottom: 50px;
+    box-shadow: 2px 2px 2px 2px #b6b4b4;
+    
+    
 }
 
 .hotelimg {
-    width: 200px;
-    height: 110px;
+    width: 300px;
+    height: 150px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
@@ -219,13 +237,18 @@ i {
 
 
 .acominfo {
-    font-size: x-small;
+    font-size: small;
     padding-left: 20px;
-    padding-bottom: 5px;
-    height: 50px;
+    padding-bottom: 10px;
+    padding-top: 0px;
+    height: 60px;
    
 }
 
+h5 {
+    font-size: large;
+    padding-left: 45px;
+}
 /* most popular */
 
 #mostpopular {
@@ -241,6 +264,13 @@ i {
     padding: 10px;
 }
 
+#starmp {
+    background: none;
+    border-radius: 0px;
+    padding:2px;
+    color: black;
+}
+
 span {
     display:flex;
     flex-direction: row;
@@ -253,19 +283,23 @@ span {
     background-color: white;
     display:flex;
     flex-direction: row;
-   
+    width:400px;
+    margin-left: 55px;
+    margin-bottom: 50px; 
+    box-shadow: 2px 2px 2px 2px #b6b4b4;
+    flex-basis: 15%;
     
    }
 
    .mpinfo {
-    font-size: x-small;
-    padding-left: 50px;
+    font-size: small;
+    padding-left: 30px;
 
    }
 
    .hotelimgmp {
-    height: 100px;
-    width: 130px; 
+    height: 160px;
+    width: 170px; 
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
    }
