--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,7 +55,7 @@ a:hover {
 }
 
 
-/** end of head section CSS - need to add media queries */
+/** end of head section CSS  */
 
 /* search */
 button {
@@ -83,6 +83,8 @@ input {
     font-weight: bold;
     color: black;
     font-family: 'Raleway', sans-serif;
+    height: 50px;
+    width: 350px;
 }
 
 #searchicon {
@@ -92,14 +94,19 @@ border-top-left-radius: 10px;
 border-bottom-left-radius: 10px;
 border-bottom-right-radius: 0px;
 border-top-right-radius: 0px;
+display: flex;
+flex-wrap: wrap;
+align-content:center;
 }
 
 #text {
+   
     padding-left: 50px;
 }
 
 #searchform {
     padding-left: 50px; 
+    flex-basis: 50%;
 }
 
 /* Filters */
@@ -149,16 +156,21 @@ i {
     width: 10px;
     height: 10px;
     margin-left: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
 }
 
 #info {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    align-items: center;
     width:fit-content;
     height: fit-content;
-    margin-left: 10px;
+}
 
+#infotxt {
+    padding-left: 20px;
+    padding-bottom: 20px;
 }
 
 /* accommodations */
@@ -369,22 +381,47 @@ footer {
 
 @media only screen and (max-device-width: 600px) {
 
+    /*logo and nav*/
+
+    body {
+        font-family: 'Raleway', sans-serif;
+        width: auto;
+        border: 0;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction:column;
+    }
+
+    #logoimg {
+        display: flex;
+        justify-content: center;
+        padding-right: 50px;
+        
+    }
+
     #headdiv {
         display: flex;
         flex-direction: column;
     }
     
-    img {
-        display: flex;
-        justify-content: center;
-    }
-    
-    a:hover {
+  
+     a:hover {
         color:#0065FC;
         border-width: 2px;
         border-bottom-style: solid;
         border-color: #0065FC;
         border-top-style: none;
     }
+    /* text search and filters */ 
+    
+
+    #text {
+        display: flex;
+        flex-direction: column;
+        font
+       
+    }
+
     
     }
