--- a/CSS/style.css
+++ b/CSS/style.css
@@ -261,7 +261,7 @@ h5 {
     background-color:#F2F2F2;
     border-radius: 10px;
     box-sizing: border-box;
-    width:40%;
+    width: fit-content;
     margin-left:50px;
     margin-right:50px;
     padding: 10px;
@@ -367,7 +367,9 @@ span {
     width: 400px;
 }
 
-
+#foot {
+    padding-left: 0px;
+}
 
 footer {
     display:flex;
@@ -381,7 +383,7 @@ footer {
 
 /* MEDIA QUERIES SECTION */
 
-@media only screen and (max-device-width: 600px) {
+@media only screen and (max-device-width: 768px) {
 
     /*logo and nav*/
 
@@ -393,6 +395,18 @@ footer {
         padding: 0;
         display: flex;
         flex-direction:column;
+        flex-shrink: 3;
+    }
+
+    #Accommodation { 
+        display: flex; 
+        justify-content: center;
+        
+    }
+
+    #Activities {
+        display: flex; 
+        justify-content: center;
     }
 
     #logoimg {
@@ -447,14 +461,16 @@ footer {
         flex-direction: column;
         flex-wrap: nowrap;
         
+        
     }
 
     
 
     span {
         display: flex;
-        flex-direction: row;
+        flex-direction: column-reverse;
         flex-wrap: wrap;
+       
     }
 
    
@@ -463,7 +479,8 @@ footer {
         display: flex;
         flex-direction: row;
         height: 300px;
-        width: 500px;
+        width: 600px;
+       
     }
 
     .hotelimg {
@@ -471,6 +488,7 @@ footer {
         object-fit: cover;
         border-top-right-radius: 0px;
         border-bottom-left-radius: 20px;
+        
     }
 
   #mostpopular {
@@ -479,15 +497,17 @@ footer {
         flex-wrap: nowrap;
         width: 100%;
         margin-top: 40px;
+        
     }
 
     .mpcards {
         display: flex;
         flex-direction: column;
         height: 300px;
-        width: 500px;
+        width: 600px;
         margin-bottom: 30px;
         margin-left: 0px;
+        
         
     }
 
@@ -496,21 +516,25 @@ footer {
         object-fit: cover;
         border-top-right-radius: 20px;
         border-bottom-left-radius: 0px;
+        
     }
 
     h5 {
         padding-left: 0px;
+       
     }
 
     #actcontainer {
         display: flex;
         flex-direction: column;
+       
         }
 
     #act {
-        width: 500px;
+        width: 600px;
         height: 300px; 
         margin-left: 0px;
+      
     }
     #headm{
         padding-left: 50px;
@@ -518,6 +542,7 @@ footer {
 
     #actcardscontainer {
         max-height: none;
+        
     }
 
     footer {
@@ -526,3 +551,12 @@ footer {
         flex-wrap: wrap;
     }
 }
+
+/* things left to do: 
+
+make sure images match
+check tablet version 
+swap side of image for most popular
+ensure full screen size works. 
+
+*/
