--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,8 @@ body {
     border: 0;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -69,6 +71,7 @@ button {
   
 }
 
+
 form {
     display:flex;
     border-radius: 10px;
@@ -87,7 +90,7 @@ input {
     width: 350px;
 }
 
-#searchicon {
+#searchbutton {
 background-color: #F2F2F2;
 color: black;
 border-top-left-radius: 10px;
@@ -97,6 +100,12 @@ border-top-right-radius: 0px;
 display: flex;
 flex-wrap: wrap;
 align-content:center;
+}
+
+#searchicon {
+    
+    color: white;
+    background-color: #0065FC;
 }
 
 #text {
@@ -262,6 +271,7 @@ h5 {
     border-radius: 10px;
     box-sizing: border-box;
     width: fit-content;
+    height: fit-content; 
     margin-left:50px;
     margin-right:50px;
     padding: 10px;
@@ -290,7 +300,7 @@ span {
     margin-left: 55px;
     margin-bottom: 50px; 
     box-shadow: 2px 2px 2px 2px #b6b4b4;
-    flex-basis: 15%;
+    
     
    }
 
@@ -430,6 +440,17 @@ footer {
         border-top-style: none;
     }
     /* text search and filters */ 
+
+    #searchtxt {
+        display: none;
+    }
+
+    button {
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+    }
+
+   
     
 
     #text {
@@ -446,8 +467,9 @@ footer {
 
     #ul {
         display: flex; 
-        flex-direction: column;
+        flex-direction: row;
         flex-wrap: wrap;
+        max-width: 800px;
     }
 
     #li {
@@ -455,68 +477,68 @@ footer {
     }
 
     /*acom, most pop and activities */
-
-    #acom {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        
-        
-    }
-
-    
-
-    span {
+  span {
         display: flex;
         flex-direction: column-reverse;
         flex-wrap: wrap;
        
     }
 
-   
+    #acom {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        background-color: white;
+        margin: 0px;
+    }
 
     .cards {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        flex-shrink: 4;
         height: 300px;
         width: 600px;
+        border-width: 10px;
        
     }
 
     .hotelimg {
-        height: 100%;
+        height: 70%;
+        width: 100%;
         object-fit: cover;
-        border-top-right-radius: 0px;
-        border-bottom-left-radius: 20px;
-        
     }
 
   #mostpopular {
         display: flex;
         flex-direction: column;
-        flex-wrap: nowrap;
-        width: 100%;
+        flex-wrap: wrap;
+        flex-shrink: 4;
         margin-top: 40px;
         
     }
 
     .mpcards {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         height: 300px;
         width: 600px;
         margin-bottom: 30px;
         margin-left: 0px;
+        border-width: 10px;
         
         
     }
 
     .hotelimgmp {
-        width: 100%;
+        width: 50%;
+        height: 100%;
         object-fit: cover;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0px;
         
+        
+    }
+
+    .mpinfo {
+        font-size:x-large;
     }
 
     h5 {
@@ -552,6 +574,12 @@ footer {
     }
 }
 
+
+@media (min-device-width: 768px) {
+    #searchicon {
+        display: none; 
+    }
+}
 /* things left to do: 
 
 make sure images match
