--- a/CSS/style.css
+++ b/CSS/style.css
@@ -238,7 +238,7 @@ i {
 
 .cards {
     flex: 2 2 30%;
-    min-width: 200px;
+    
     border-style: solid;
     border-color: white;
     border-radius: 20px;
@@ -337,7 +337,7 @@ h5 {
 
 #actimg1, #actimg4 {
     width: 100%;
-    height: 80%;
+    height: 90%;
     object-fit:cover;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -345,7 +345,7 @@ h5 {
  
  #actimg5, #actimg6 {
     width: 100%;
-    height: 80%;
+    height: 85%;
     object-fit:cover;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -354,7 +354,7 @@ h5 {
  
  #actimg2 {
     width: 100%;
-    height: 80%;
+    height: 85%;
     object-fit:cover;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -362,7 +362,7 @@ h5 {
  
  #actimg3 {
     width: 100%;
-    height: 80%;
+    height: 85%;
     object-fit:cover;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -378,8 +378,7 @@ h5 {
 
 
 #actcardscontainer {
-    display: flex;
-    flex-flow: row wrap;
+    display: grid;
     margin-left: 50px;
     
     
@@ -405,27 +404,44 @@ h5 {
 
 .size1 {
     
-    width: 20%;
+    width: 80%;
 }
 
-.size2 {
-    
-    width: 20%;
+#act1 {
+grid-row-start: 1;
+grid-row-end: 3;
+grid-column: 1;
 }
 
-.size3 {
-    
-    width: 20%;
+#act2 {
+grid-row: 1;
+grid-column: 2;
 }
 
-.size4 {
-    
-    width: 20%;
+#act3 {
+grid-row: 2;
+grid-column: 2;
 }
+
+#act4 {
+grid-row: 1/3;
+grid-column: 3;
+}
+
+#act5 {
+grid-row: 1;
+grid-column: 4;
+}
+
+#act6 {
+grid-row: 2;
+grid-column: 4;
+}  
 
 .foot {
     padding-left: 0px;
 }
+
 
 .footerdiv {
     padding: 20px; 
@@ -439,7 +455,6 @@ h5 {
 footer {
     display:flex;
     flex-direction: row;
-  
     background-color:#F2F2F2;
     margin-top: 50px;
 }
