--- a/CSS/style.css
+++ b/CSS/style.css
@@ -237,13 +237,11 @@ i {
 }
 
 .cards {
-    flex: 2 2 30%;
-    
     border-style: solid;
     border-color: white;
     border-radius: 20px;
     background-color: rgb(255, 255, 255);
-    margin: 10px;
+    width: 30%;
     margin-bottom: 50px;
     box-shadow: 2px 2px 2px 2px #b6b4b4;
 }
@@ -337,7 +335,7 @@ h5 {
 
 #actimg1, #actimg4 {
     width: 100%;
-    height: 90%;
+    height: 95%;
     object-fit:cover;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -345,7 +343,7 @@ h5 {
  
  #actimg5, #actimg6 {
     width: 100%;
-    height: 85%;
+    height: 90%;
     object-fit:cover;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -354,7 +352,7 @@ h5 {
  
  #actimg2 {
     width: 100%;
-    height: 85%;
+    height: 90%;
     object-fit:cover;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -362,7 +360,7 @@ h5 {
  
  #actimg3 {
     width: 100%;
-    height: 85%;
+    height: 90%;
     object-fit:cover;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -397,8 +395,7 @@ h5 {
 .txt { 
    font-weight: bold;
    margin: 0px;
-   padding-left: 20px;
-   padding-top: 20px;
+   padding: 10px;
    
 }
 
