--- a/CSS/style.css
+++ b/CSS/style.css
@@ -278,12 +278,9 @@ h5 {
     flex-wrap: wrap;
     background-color:#F2F2F2;
     border-radius: 10px;
-    box-sizing: border-box;
-    width: fit-content;
-    height: fit-content; 
     margin-left:50px;
     margin-right:50px;
-    padding: 10px;
+    padding-right: 20px;
 }
 
 #starmp {
@@ -305,7 +302,7 @@ h5 {
     background-color: rgb(255, 255, 255);
     display:flex;
     flex-direction: row;
-    width:400px;
+    width: 80%;
     margin-left: 55px;
     margin-right: 50px;
     margin-bottom: 50px; 
