--- a/CSS/style.css
+++ b/CSS/style.css
@@ -557,9 +557,8 @@ footer {
     .cards {
         display: flex;
         flex-direction: column;
-        flex-basis: unset; 
         height: 300px;
-        width: 600px;
+        width: 95%;
         border-width: 10px;
        
     }
@@ -570,9 +569,18 @@ footer {
     }
 
     .hotelimg {
-        height: 70%;
+        height: 65%;
         width: 100%;
         object-fit: cover;
+    }
+
+    .acominfo {
+        font-size: medium;
+        font-weight: bold; 
+    }
+
+    .hotelname {
+        font-size: large;
     }
 
   #mostpopular {
@@ -582,20 +590,16 @@ footer {
         flex-shrink: 4;
         margin-top: 40px;
         width: 100%;
-        
-        
     }
 
     .mpcards {
         display: flex;
         flex-direction: row;
         height: 300px;
-        width: 600px;
+        width: 100%;
         margin-bottom: 30px;
         margin-left: 0px;
         border-width: 10px;
-        
-        
     }
 
 
@@ -603,8 +607,6 @@ footer {
         width: 50%;
         height: 100%;
         object-fit: cover;
-        
-        
     }
 
     .mpinfo {
@@ -634,12 +636,19 @@ footer {
         margin-left: 0px;
       
     }
+
+    #actimg1, #actimg2, #actimg3, #actimg4, #actimg5, #actimg6 {
+        width: 100%;
+        height: 80%;
+    }
+
     #headm{
         padding-left: 50px;
     }
 
     #actcardscontainer {
-        max-height: none;
+        display: flex;
+        flex-direction: column;
         
     }
 
@@ -648,6 +657,7 @@ footer {
         flex-direction: column;
         flex-wrap: wrap;
         padding-left: 5px;
+        width: 130%;
 
     }
 }
