--- a/CSS/style.css
+++ b/CSS/style.css
@@ -663,7 +663,7 @@ footer {
 }
 
 
-@media (min-device-width: 768px) {
+@media (min-width: 768px) {
     #searchicon {
         display: none; 
     }
